group = "sk.fourq.calllog"
version = "1.0"

buildscript {
    repositories {
        mavenCentral()
        google()
    }

    dependencies {
        classpath 'com.android.tools.build:gradle:8.7.3'
    }
}

rootProject.allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

apply plugin: "com.android.library"

// 添加这个配置来解决 Android 35 的 jlink 问题
gradle.projectsEvaluated {
    tasks.withType(JavaCompile) {
        options.compilerArgs += ["--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"]
        options.compilerArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
    }
}

android {
    compileSdk 35
    namespace "sk.fourq.calllog"

    compileOptions {
        // Flag to enable support for the new language APIs
        coreLibraryDesugaringEnabled true
        // Sets Java compatibility to Java 17
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    defaultConfig {
        minSdkVersion 21
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    
    lint {
        disable 'InvalidPackage'
        abortOnError false
    }
    
    packaging {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
    
    // 添加配置来解决 Android 35 的 jlink 问题
    configurations.all {
        resolutionStrategy {
            force 'androidx.core:core:1.12.0'
            force 'androidx.annotation:annotation:1.7.1'
        }
    }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'androidx.annotation:annotation:1.7.1'
    implementation 'androidx.core:core:1.12.0'
    testImplementation 'junit:junit:4.13.2'
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
    implementation 'com.google.code.gson:gson:2.10.1'
}
